--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
             </div>
         </div>
     </div>
-    <div class="parallax" id="aboutBg" parallax="aboutBg"><img src="http://www.gsa.europa.eu/sites/default/files/SHIP.jpg"></div>
+    <div class="parallax" id="aboutBg" parallax="aboutBg"><img src="images/about-home.jpg"></div>
 </div>
 <div class="container mission-section center valign-wrapper">
     <div class="section">
@@ -23,9 +23,12 @@
     <div class="container history-section center">
         <div class="section">
             <div class="row">
-                <div class="col s12">
+                <div class="col s12 m4">
+                    <img class="responsive-img" src="images/history.jpg" />
+                </div>
+                <div class="col s12 m8">
                     <h5 class="header grey-text text-lighten-5">History</h5>
-                    <p class="grey-text text-lighten-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. Sed finibus, dolor id consectetur porttitor, ante augue pharetra risus, vitae sodales ante enim at lacus. Maecenas pharetra tempus neque, non porta magna tincidunt eget. </p>
+                    <p class="grey-text text-lighten-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus.</p>
                 </div>
             </div>
         </div>
@@ -40,7 +43,7 @@
                     <p class="grey-text text-darken-1 left-align valign-wrapper">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. Sed finibus, dolor id consectetur porttitor, ante augue pharetra risus, vitae sodales ante enim at lacus. Maecenas pharetra tempus neque, non porta magna tincidunt eget. </p>
                 </div>
                 <div class="col s12 m4">
-                    <img class="responsive-img" src="images/services.f8d125a1.png" />
+                    <img class="responsive-img" src="images/services.jpg" />
                 </div>
             </div>
         </div>
@@ -50,30 +53,21 @@
     <div class="section">
         <div class="row">
             <div class="col s12 m12">
-                <h5 class="header grey-text text-darken-2 center">Meet the People</h5>
+                <h5 class="header grey-text text-darken-2 center">Meet the Team</h5>
             </div>
         </div>
         <div class="row">
             <div class="col s12 m12">
-                <div class="col s12 m4">
-                    <img class="responsive-img" src="images/about-home.da29d89f.jpg" />
-                </div>
-                <div class="col s12 m8">
-                    <h6 class="grey-text text-darken-3 left-align bold">Lorem Ipsum</h6>
-                    <p class="grey-text text-darken-1 left-align valign-wrapper">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum.</p>
-                </div>
+                    <img class="responsive-img" src="images/management.jpg" />
+               
+                
             </div>
         </div>
         <div class="row">
             <div class="col s12 m12">
-                <div class="col s12 m8">
                     <h6 class="grey-text text-darken-3 left-align bold">Lorem Ipsum</h6>
                     <p class="grey-text text-darken-1 left-align valign-wrapper">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum.</p>
-                </div>
-                <div class="col s12 m4">
-                    <img class="responsive-img" src="images/about-home.da29d89f.jpg" />
-                </div>
-            </div>
+                    </div>
         </div>
     </div>
 </div>
