--- a/views/dashboard/dashboard-main.html
+++ b/views/dashboard/dashboard-main.html
@@ -4,16 +4,16 @@
         <div class="card white">
             <div class="card-content white-text">
                 <div class="col s12 m3">
-                    <img src="images/Untitled-1.71f00032.svg" />
+                    <img src="images/Untitled-1.svg" />
                 </div>
                 <div class="col s12 m3">
-                    <img src="images/Untitled-1.71f00032.svg" />
+                    <img src="images/Untitled-1.svg" />
                 </div>
                 <div class="col s12 m3">
-                    <img src="images/Untitled-1.71f00032.svg" />
+                    <img src="images/Untitled-1.svg" />
                 </div>
                 <div class="col s12 m3">
-                    <img src="images/Untitled-1.71f00032.svg" />
+                    <img src="images/Untitled-1.svg" />
                 </div>
             </div>
         </div>
@@ -23,14 +23,14 @@
     <div class="col s12 m8 card-main-stat">
         <div class="card white">
             <div class="card-content">
-                <img src="images/stat.2ef4ab9c.svg" />
+                <img src="images/stat.svg" />
             </div>
         </div>
     </div>
     <div class="col s12 m4 some-cards">
         <div class="card first-card">
             <div class="card-image">
-                <img src="images/background1.29d0f5fb.jpg">
+                <img src="images/background1.jpg">
                 <span class="card-title">Updates</span>
             </div>
             <div class="card-content">
