--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -1,6 +1,6 @@
 <ul id="nav-mobile" class="side-nav fixed dashboard-side-nav" style="left: 0px;" ng-controller="DashboardSideNavCtrl">
     <li class="user">
-        <p class="left-align"><img src="images/user.170caa11.jpg" class="circle" />
+        <p class="left-align"><img src="images/user.jpg" class="circle" />
         </p>
         <p class="left-align white-text">user@example.com</p>
 
