--- a/views/helpdesk.html
+++ b/views/helpdesk.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="parallax" parallax="faqBg" id="faqBg">
-        <img src="images/faq.5c6334eb.jpg"/>
+        <img src="images/faq.jpg"/>
     </div>
 </div>
 <div class="container faq-contents-section faq-list">
