--- a/views/schedule.html
+++ b/views/schedule.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="parallax news" parallax="schedBG" id="schedBG">
-        <img src="images/schedule.2b567267.jpg">
+        <img src="images/schedule.jpg">
     </div>
 </div>
 <div class="container">
