--- a/views/sidenav.html
+++ b/views/sidenav.html
@@ -3,7 +3,7 @@
         <ul class="side-menu left hide-on-med-and-down">
             <li><a href="" data-activates="nav-mobile" side-nav id="menuBtnA"><i class="material-icons left">menu</i>Menu</a></li>
         </ul>
-        <a id="logo-container" href="#/" class="brand-logo center">Logo</a>
+        <a id="logo-container" href="#/" class="brand-logo center">Starhorse Shippling Lines</a>
         <ul id="nav-mobile" class="side-nav">
             <li ng-repeat="list in linkList"><a ui-sref={{list.link}} class="waves-effect waves-light">{{list.title}}</a></li>
         </ul>
