--- a/views/dashboard/dashboard-schedule.html
+++ b/views/dashboard/dashboard-schedule.html
@@ -4,7 +4,8 @@
             <div class="card-content">
                 <div class="row schedule-section">
                     <h3 class="grey-text light left">Schedule</h3>
-                    <a class="waves-effect waves-light btn right" modal data-target="schedModal"><i class="material-icons left">add</i>Add schedule</a>  <a class="waves-effect waves-light btn right" modal data-target="routeModal"><i class="material-icons left">add</i>Add Route</a>
+                    <a class="waves-effect waves-light btn right" modal data-target="schedModal"><i class="material-icons left">add</i>Add schedule</a>
+                    <a class="waves-effect waves-light btn right add-route-btn" modal data-target="routeModal"><i class="material-icons left">add</i>Add Route</a>
                 </div>
                 <table class="centered responsive bordered">
                     <thead>
@@ -40,7 +41,6 @@
         </div>
     </div>
 </div>
-
 <!-- Modal Structure -->
 <div id="schedModal" class="modal modal-fixed-footer">
     <div class="modal-content">
@@ -48,6 +48,10 @@
         <div class="row">
             <form class="col s12">
                 <div class="row">
+                    <div class="center upload-photo">
+                        <div><i class="material-icons">file_upload</i></div>
+                        <div>Upload Photo</div>
+                    </div>
                     <div class="input-field col s6">
                         <input id="first_name" type="text" class="validate">
                         <label for="first_name">Boat</label>
@@ -97,7 +101,14 @@
                         <label for="last_name">To</label>
                     </div>
                 </div>
-                
+                <div class="row">
+                    <ul class="collection with-header">
+                        <li class="collection-header">
+                            <h4>List of Routes</h4>
+                        </li>
+                        <li class="collection-item" ng-repeat="route in schedList" >{{route.route}}</li>
+                    </ul>
+                </div>
             </form>
         </div>
     </div>
