--- a/views/dashboard/dashboard-inbox.html
+++ b/views/dashboard/dashboard-inbox.html
@@ -3,7 +3,7 @@
         <div class="card grey lighten-5">
             <div class="card-content">
                 <h3 class="grey-text light">Inbox</h3>
-                <table class="centered responsive bordered">
+                <table class="responsive-table bordered">
                 	<thead>
                 		<th>Full Name</th>
                 		<th>Email</th>
