--- a/views/dashboard/dashboard-news.html
+++ b/views/dashboard/dashboard-news.html
@@ -6,7 +6,7 @@
                 	<h3 class="grey-text light left">News</h3>
                 	<a class="waves-effect waves-light btn right" modal data-target="newsModal"><i class="material-icons left">add</i>Add News</a>
                 </div>
-                <table class="centered responsive bordered">
+                <table class="responsive-table bordered">
                 	<thead>
                 		<th>ID</th>
                 		<th>Headline</th>
