--- a/views/dashboard/dashboard-ships.html
+++ b/views/dashboard/dashboard-ships.html
@@ -6,7 +6,7 @@
                     <h3 class="grey-text light left">Ships</h3>
                     <a class="waves-effect waves-light btn right" modal data-target="shipModal"><i class="material-icons left">add</i>Add ship</a>
                 </div>
-                <table class="centered responsive bordered">
+                <table class="responsive-table bordered">
                     <thead>
                         <th>&nbsp;</th>
                         <th>Name</th>
