--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -1,4 +1,5 @@
-<ul id="nav-mobile" class="side-nav fixed dashboard-side-nav" style="left: 0px;" ng-controller="DashboardSideNavCtrl">
+
+<ul id="nav-mobile-dashboard" side-nav class="side-nav dashboard-side-nav fixed" style="left: 0px;" ng-controller="DashboardSideNavCtrl">
     <li class="user">
         <p class="left-align"><img src="images/user.jpg" class="circle" />
         </p>
@@ -23,8 +24,10 @@
     </ul>
     <nav class="dashboard-nav">
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Logo</a>
-            <ul class="right hide-on-med-and-down">                
+        <ul class="side-menu db-side-menu left hide-on-large-only">
+            <li><a href="" data-activates="nav-mobile-dashboard" side-nav id="dashboardA"><i class="material-icons left">menu</i>Menu</a></li>
+        </ul>            
+            <ul class="right">                
                 <li class="dashboard-settings">
                     <a class="dropdown-button" dropdown href="#!" data-activates="dashboardMore">Settings<i class="material-icons right">more_vert</i></a>
                 </li>
