--- a/views/main.html
+++ b/views/main.html
@@ -34,63 +34,69 @@
                 <div class="col s12">
                     <div class="slider news-slider" slider>
                         <ul class="slides">
+                            <!-- <li ng-repeat="news in featuredNews">
+                                <div class="caption left-align">                                    
+                                    <div class="col s12 m4">
+                                        <img ng-src={{news.img}} class="responsive-img" />
+                                    </div>
+                                    <div class="col s12 m8">
+                                        <h5 class="header grey-text text-lighten-5">{{news.title}}</h5>
+                                         <p class="grey-text text-lighten-4">{{news.desc}}</p>
+                                    </div>
+                                </div>
+                            </li> -->
                             <li>
                                 <div class="caption left-align">
-                                    
                                     <div class="col s12 m4">
                                         <img src="images/schedule.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
-                                         <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
+                                        <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="caption left-align">
-                                    
                                     <div class="col s12 m4">
                                         <img src="images/schedule.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
-                                         <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
+                                        <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="caption left-align">
-                                    
                                     <div class="col s12 m4">
                                         <img src="images/schedule.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
-                                         <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
+                                        <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="caption left-align">
-                                    
                                     <div class="col s12 m4">
                                         <img src="images/schedule.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
-                                         <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
+                                        <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="caption left-align">
-                                    
                                     <div class="col s12 m4">
                                         <img src="images/schedule.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
-                                         <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
+                                        <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. </p>
                                     </div>
                                 </div>
                             </li>
@@ -173,11 +179,11 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 m6">
-                    <p class="left-align grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. </p>
-                    <a class="waves-effect waves-light btn">Go to services</a>
+                    <img src="images/services-home.jpg" class="responsive-img" />
                 </div>
                 <div class="col s12 m6">
-                    <img src="images/services-home.jpg" class="responsive-img" />
+                    <p class="left-align grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. </p>
+                    <a class="waves-effect waves-light btn">Go to services</a>
                 </div>
             </div>
         </div>
