--- a/views/dashboard/dashboard-schedule.html
+++ b/views/dashboard/dashboard-schedule.html
@@ -3,11 +3,15 @@
         <div class="card grey lighten-5">
             <div class="card-content">
                 <div class="row schedule-section">
-                    <h3 class="grey-text light left">Schedule</h3>
-                    <a class="waves-effect waves-light btn right" modal data-target="schedModal"><i class="material-icons left">add</i>Add schedule</a>
-                    <a class="waves-effect waves-light btn right add-route-btn" modal data-target="routeModal"><i class="material-icons left">add</i>Add Route</a>
+                    <div class="col m4 s12"><h3 class="grey-text light left">Schedule</h3></div>
+                    <div class="col m4 s12">
+                            <a class="waves-effect waves-light btn right" modal data-target="schedModal"><i class="material-icons left">add</i>Add schedule</a>
+                    </div>
+                    <div class="col m4 s12">                    
+                            <a class="waves-effect waves-light btn right add-route-btn" modal data-target="routeModal"><i class="material-icons left">add</i>Add Route</a>
+                    </div>
                 </div>
-                <table class="centered responsive bordered">
+                <table class="responsive-table bordered">
                     <thead>
                         <th>&nbsp;</th>
                         <th>Boat</th>
