--- a/views/contact.html
+++ b/views/contact.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="parallax news" parallax="contactBg" id="contactBg">
-        <img src="images/contact-us.80fe001e.jpg">
+        <img src="images/contact-us.jpg">
     </div>
 </div>
 <div class="container contact-form-section">
