--- a/views/careers.html
+++ b/views/careers.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="parallax" parallax="careerBg" id="careerBg">
-        <img src="images/careers.jpg" />
+        <img src="images/careers.974ff14a.jpg" />
     </div>
 </div>
 <div class="container">
