--- a/views/main.html
+++ b/views/main.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 m6">
-                    <img src="images/about-company.jpg" class="responsive-img" />
+                    <img src="images/about-company.JPG" class="responsive-img" />
                 </div>
                 <div class="col s12 m6 valign">
                     <h5 class="header grey-text text-darken-2">About the company</h5>
