--- a/views/dashboard/dashboard-ships.html
+++ b/views/dashboard/dashboard-ships.html
@@ -21,7 +21,7 @@
                             <td>{{ship.desc}}</td>
                             <td>{{ship.dimen}}</td>
                             <td class="edit-btns">
-                                <a class="btn-floating waves-effect waves-light"><i class="material-icons">mode_edit</i></a>
+                                <a class="btn-floating waves-effect waves-light" modal data-target="shipModalEdit"><i class="material-icons">mode_edit</i></a>
                                 <a class="btn-floating waves-effect waves-light"><i class="material-icons">delete</i></a>
                             </td>
                         </tr>
@@ -42,13 +42,47 @@
                         <div><i class="material-icons">file_upload</i></div>
                         <div>Upload Photo</div>
                     </div>
-                    <div class="input-field col s6">
+                    <div class="input-field col s12">
                         <input id="first_name" type="text" class="validate">
                         <label for="first_name">Boat</label>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="first_name" type="text" class="validate">
+                        <label for="first_name">Name</label>
+                    </div>
                     <div class="input-field col s6">
                         <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Time</label>
+                        <label for="last_name">Description</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="disabled" type="text" class="validate">
+                        <label for="disabled">Dimension</label>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a class=" modal-action modal-close waves-effect waves-green btn-flat">Save</a> <a class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+    </div>
+</div>
+<div id="shipModalEdit" class="modal modal-fixed-footer">
+    <div class="modal-content">
+        <h4>Edit Ship</h4>
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="center upload-photo">
+                        <div><i class="material-icons">file_upload</i></div>
+                        <div>Upload Photo</div>
+                    </div>
+                    <div class="input-field col s12">
+                        <input id="first_name" type="text" class="validate">
+                        <label for="first_name">Boat</label>
                     </div>
                 </div>
                 <div class="row">
