updated schedules page

--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
             </div>
         </div>
     </div>
-    <div class="parallax" id="aboutBg" parallax="aboutBg"><img src="images/about-home.jpg"></div>
+    <div class="parallax" id="aboutBg" parallax="aboutBg"><img src="images/about-home.98d01f5f.jpg"></div>
 </div>
 <div class="container mission-section center valign-wrapper">
     <div class="section">
@@ -24,7 +24,7 @@
         <div class="section">
             <div class="row">
                 <div class="col s12 m4">
-                    <img class="responsive-img" src="images/history.jpg" />
+                    <img class="responsive-img" src="images/history.f19b0e6a.jpg" />
                 </div>
                 <div class="col s12 m8">
                     <h5 class="header grey-text text-lighten-5">History</h5>
@@ -43,7 +43,7 @@
                     <p class="grey-text text-darken-1 left-align valign-wrapper">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper elementum massa. Aliquam cursus laoreet dolor, ac ullamcorper diam ullamcorper vestibulum. Etiam risus massa, dapibus a commodo pharetra, imperdiet sit amet metus. Sed finibus, dolor id consectetur porttitor, ante augue pharetra risus, vitae sodales ante enim at lacus. Maecenas pharetra tempus neque, non porta magna tincidunt eget. </p>
                 </div>
                 <div class="col s12 m4">
-                    <img class="responsive-img" src="images/services.jpg" />
+                    <img class="responsive-img" src="images/services.6ae5916c.jpg" />
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
         </div>
         <div class="row">
             <div class="col s12 m12">
-                    <img class="responsive-img" src="images/management.jpg" />
+                    <img class="responsive-img" src="images/management.1ceeec19.jpg" />
                
                 
             </div>
