--- a/views/contact.html
+++ b/views/contact.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="parallax news" parallax="contactBg" id="contactBg">
-        <img src="images/contact-us.jpg">
+        <img src="images/contact-us.80fe001e.jpg">
     </div>
 </div>
 <div class="container contact-form-section">
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div class="parallax" parallax="maps" id="maps">
-        <img src="images/maps.jpg" alt="Unsplashed background img 2">
+        <img src="images/maps.897b67c1.jpg" alt="Unsplashed background img 2">
     </div>
 </div>
 <div class="container">
