--- a/views/main.html
+++ b/views/main.html
@@ -9,7 +9,7 @@
             </div>
         </div>
     </div>
-    <div class="parallax" id="homeBG" parallax="homeBG"><img src="images/banner.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax" id="homeBG" parallax="homeBG"><img src="images/banner.c6e3cec6.jpg" alt="Unsplashed background img 1"></div>
     <!-- <div class="parallax oceanic"></div> -->
 </div>
 <div class="about-section valign-wrapper page">
@@ -48,7 +48,7 @@
                             <li>
                                 <div class="caption left-align">
                                     <div class="col s12 m4">
-                                        <img src="images/schedule.jpg" class="responsive-img" />
+                                        <img src="images/schedule.8b086d8d.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
@@ -59,7 +59,7 @@
                             <li>
                                 <div class="caption left-align">
                                     <div class="col s12 m4">
-                                        <img src="images/schedule.jpg" class="responsive-img" />
+                                        <img src="images/schedule.8b086d8d.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
@@ -70,7 +70,7 @@
                             <li>
                                 <div class="caption left-align">
                                     <div class="col s12 m4">
-                                        <img src="images/schedule.jpg" class="responsive-img" />
+                                        <img src="images/schedule.8b086d8d.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
@@ -81,7 +81,7 @@
                             <li>
                                 <div class="caption left-align">
                                     <div class="col s12 m4">
-                                        <img src="images/schedule.jpg" class="responsive-img" />
+                                        <img src="images/schedule.8b086d8d.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
@@ -92,7 +92,7 @@
                             <li>
                                 <div class="caption left-align">
                                     <div class="col s12 m4">
-                                        <img src="images/schedule.jpg" class="responsive-img" />
+                                        <img src="images/schedule.8b086d8d.jpg" class="responsive-img" />
                                     </div>
                                     <div class="col s12 m8">
                                         <h5 class="header grey-text text-lighten-5">Title of the News</h5>
@@ -106,7 +106,7 @@
             </div>
             <div class="row">
                 <div class="col s12 m4">
-                    <img src="images/weather/art_clear.png" class="responsive-img" />
+                    <img src="images/weather/art_clear.695f2f0c.png" class="responsive-img" />
                 </div>
                 <div class="col s12 m4 grey-text text-lighten-5">
                     <h1>34°</h1>
@@ -130,22 +130,22 @@
                     <tbody>
                         <tr>
                             <td>
-                                <img src="images/weather/art_clouds.png" class="responsive-img" />
+                                <img src="images/weather/art_clouds.45e1913d.png" class="responsive-img" />
                             </td>
                             <td>
-                                <img src="images/weather/art_fog.png" class="responsive-img" />
+                                <img src="images/weather/art_fog.bd14db13.png" class="responsive-img" />
                             </td>
                             <td>
-                                <img src="images/weather/art_light_clouds.png" class="responsive-img" />
+                                <img src="images/weather/art_light_clouds.6c8bcfaf.png" class="responsive-img" />
                             </td>
                             <td>
-                                <img src="images/weather/art_light_rain.png" class="responsive-img" />
+                                <img src="images/weather/art_light_rain.e80cc6b3.png" class="responsive-img" />
                             </td>
                             <td>
-                                <img src="images/weather/art_rain.png" class="responsive-img" />
+                                <img src="images/weather/art_rain.73b16f20.png" class="responsive-img" />
                             </td>
                             <td>
-                                <img src="images/weather/art_storm.png" class="responsive-img" />
+                                <img src="images/weather/art_storm.b34cd8f2.png" class="responsive-img" />
                             </td>
                         </tr>
                         <tr>
@@ -179,7 +179,7 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 m6">
-                    <img src="images/services-home.jpg" class="responsive-img" />
+                    <img src="images/services-home.39f70a54.jpg" class="responsive-img" />
                 </div>
                 <div class="col s12 m6">
                     <p class="left-align grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. </p>
